adicionado arquivo index.html corrigido paragrafo

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   
     <h1>Tabela Estilizada</h1>
 
-    
+     <p> <strong>Moda</strong> </p>
 
-      <strong>Moda</strong> 
       <table class="tabela-margem" >
         <tr class="fonte-tabelas" >
             <th class="cabecalho-moda espacamento-entre-valores">Produto</th>
@@ -32,8 +31,8 @@
         </tr>
      </table>
   
+     <p> <strong>Casa</strong></p>
 
-    <strong>Casa</strong>
     <table class="tabela-margem">
         <tr class="fonte-tabelas">
             <th class="cabecalho-casa espacamento-entre-valores">Produto</th>
@@ -49,6 +48,5 @@
         </tr>
     </table>
  
-
 </body>
 </html>
